# python-unit-defect-fun

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
prompts/: initial-python-setup.md
src/python_unit_defect_fun/: __init__.py  lambda_handler.py
terraform/: README.md  data.tf  iam.tf  main.tf  outputs.tf  variables.tf
tests/: __init__.py  test_lambda_handler.py
